<resources>
    <string name="app_name">Accessible Clue</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_form">Make A Guess</string>
    <string name="action_login">Login</string>

    <string name="guess_who">Who Did It?</string>
    <string name="guess_wwhere">Where?</string>
    <string name="guess_what">With What Weapon?</string>
    <string name="guess_why">Why Did They Do It?</string>
    <string name="guess_action">Guess Now</string>

    <string name="guess_correct">You are correct</string>
    <string name="guess_wrong">Sorry, that\'s wrong</string>

    <string name="accessibility_service_label">Clue Service</string>

    <string-array name="suspects">
        <item>Colonel Mustard</item>
        <item>Miss Scarlet</item>
        <item>Professor Plum</item>
        <item>Mrs. White</item>
        <item>Mr. Green</item>
        <item>Mrs. Peacock</item>
    </string-array>

    <string-array name="weapons">
        <item>Knife</item>
        <item>Rope</item>
        <item>Candlestick</item>
        <item>Revolver</item>
        <item>Lead Pipe</item>
        <item>Poison</item>
    </string-array>

    <string-array name="locations">
        <item>Kitchen</item>
        <item>Dining Room</item>
        <item>Conservatory</item>
        <item>Library</item>
        <item>Billiard Room</item>
        <item>Study</item>
        <item>Hall</item>
    </string-array>

    <string-array name="location_descriptions">
        <item>Crossed knife and fork icon</item>
        <item>Wine glass icon</item>
        <item>Rose icon</item>
        <item>Books icon</item>
        <item>Eight ball icon</item>
        <item>Quill and ink icon</item>
        <item>Door icon</item>
    </string-array>

    <string-array name="reasons">
        <item>Choose A Reason</item>
        <item>Revenge</item>
        <item>Crime of Passion</item>
        <item>For the Money</item>
        <item>Eliminate the Competition</item>
        <item>Just Because</item>
    </string-array>

    <string-array name="initial_reason">
        <item>Choose A Reason</item>
    </string-array>

    <string name="title_activity_guess">GuessActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email Address</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="content_password">Optional Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Email field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="pref_category_ui">Look and Feel</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Use a dark theme for AccessibleClue</string>

</resources>
